<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_book_black_24dp"
        android:title="@string/menu_title" />

    <item
        android:id="@+id/navigation_my_reservations"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/my_reservations_title" />

    <item
        android:id="@+id/navigation_make_reservation"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/booking_title" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification_preferences_title" />

</menu>